[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11.6"}
tokio = {version="1.32.0", features = ["full"]}
songbird = "0.3.2"
tracing-subscriber = "0.3.11"
wav = "1.0.0"
rand = "0.8.5"